PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.hospital-marker {
  cursor: pointer;
}

.info-box {
    cursor: default;
    width: 60em;
    height: 35em;
    position: absolute;
    border: 1px solid gray;
    border-radius: 9px;
    background-color: #000000;
    z-index: 9999;
    opacity: 0.8;
}

.close-info-box {
    padding-top: 5px;
    padding-right: 10px;
    font-size: 14pt;
    float: right;
    color: rgb(184, 184, 184);
}

.close-info-box:hover {
    cursor: pointer;
    color: rgb(90, 90, 90);
}

.hospital-name {
  color: #eceff1;
  font-size: 18pt;
  padding-left: 40px;
  padding-right: 40px;
  text-align: center;
}

.hospital-detail {
  color: #eceff1;
  font-size: 14pt;
  padding-left: 40px;
  padding-right: 40px;
  text-align: left;
}

.menu-bar {
    position: absolute;
    /* margin-top: -20px; */
    height: 7vh;
    min-height: 47px;
    width: 100%;
    z-index: 5000;
    background-color: rgb(0, 0, 0);
    opacity: 0.6;
}

.menu-options {
  margin-top: 1%;
}

.articles-menu {
  margin-left: 5%;
  color: rgb(204, 204, 204);
  display: inline;
}

.articles-menu:hover {
  cursor: pointer;
  color: white;
}

.nsw-map-menu {
  color: rgb(204, 204, 204);
  display: inline;
  margin-left: 5%;
}

.nsw-map-menu:hover {
  cursor: pointer;
  color: white;
}

.articles {
  margin-top: 20px;
  height: 100vh;
  width: 100%;
}

body {
  padding: 40px 10% 20px 10%;
}
h1 {
  padding: 20px 0;
  font-size: 2.5em;
  text-align: center;
}

